Update Colombia video URL

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@vercel/analytics": "^1.6.1",
     "ai": "^3.0.35",
     "clsx": "^2.1.1",
     "framer-motion": "^12.25.0",
